2006-03-14 jerome
* Don't display empty lines

2006-02-24 Seb
* Created this business template in order to split erp5_core