@@ -1,0 +1,2 @@
+portal_properties | csv_export
+portal_properties | csv_import
